--- a/setup.cfg
+++ b/setup.cfg
@@ -4,3 +4,11 @@ asyncio_mode=strict
 [isort]
 profile = black
 line_length = 79
+
+[pylint.MESSAGES CONTROL]
+# disable = bad-continuation, duplicate-code, import-error, missing-docstring, multiple-imports
+disable = invalid-name, unused-argument, broad-except, missing-docstring, fixme,
+          too-many-branches, too-many-statements, too-many-arguments
+
+[pylint.FORMAT]
+max-line-length = 79
