--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -96,6 +96,13 @@ repos:
           - --ignore-words-list=hass
           - --skip="./.*"
           - --quiet-level=2
+  - repo: https://github.com/pre-commit/mirrors-pylint
+    rev: v3.0.0a4
+    hooks:
+      - id: pylint
+        args:
+          - --reports=no
+        #exclude: ^$
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.942
     hooks:
