--- a/setup.cfg
+++ b/setup.cfg
@@ -6,9 +6,9 @@ profile = black
 line_length = 79
 
 [pylint.MESSAGES CONTROL]
-# disable = bad-continuation, duplicate-code, import-error, missing-docstring, multiple-imports
 disable = invalid-name, unused-argument, broad-except, missing-docstring, fixme,
-          too-many-branches, too-many-statements, too-many-arguments
+          too-many-branches, too-many-statements, too-many-arguments, protected-access,
+          import-error, too-many-locals
 
 [pylint.FORMAT]
 max-line-length = 79
