--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,8 @@ line_length = 79
 [pylint.MESSAGES CONTROL]
 disable = invalid-name, unused-argument, broad-except, missing-docstring, fixme,
           too-many-branches, too-many-statements, too-many-arguments, protected-access,
-          import-error, too-many-locals
+          import-error, too-many-locals, import-outside-toplevel,
+          logging-fstring-interpolation
 
 [pylint.FORMAT]
 max-line-length = 79
