--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ line_length = 79
 disable = invalid-name, unused-argument, broad-except, missing-docstring, fixme,
           too-many-branches, too-many-statements, too-many-arguments, protected-access,
           import-error, too-many-locals, import-outside-toplevel,
-          logging-fstring-interpolation
+          logging-fstring-interpolation, line-too-long
 
 [pylint.FORMAT]
 max-line-length = 79
