--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -107,6 +107,7 @@ repos:
       - id: pylint
         args:
           - --reports=no
+          - --py-version=3.7
         #exclude: ^$
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.960
