--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,7 @@ line_length = 79
 
 [pylint.MESSAGES CONTROL]
 disable = invalid-name, unused-argument, broad-except, missing-docstring, fixme,
+          consider-using-f-string,
           too-many-branches, too-many-statements, too-many-arguments, protected-access,
           import-error, too-many-locals, import-outside-toplevel,
           logging-fstring-interpolation, line-too-long
