--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -102,7 +102,9 @@ repos:
     hooks:
       - id: codespell
         args:
-          - --ignore-words-list=hass
+          # - --builtin=clear,rare,informal,usage,code,names,en-GB_to_en-US
+          - --builtin=clear,rare,informal,usage,code,names
+          - --ignore-words-list=hass,master
           - --skip="./.*"
           - --quiet-level=2
   - repo: https://github.com/pre-commit/mirrors-pylint
