--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,6 +15,8 @@ repos:
         additional_dependencies:
           - mdformat-toc
           - mdformat-beautysh
+          # -mdformat-shfmt
+          # -mdformat-tables
           - mdformat-config
           - mdformat-black
           - mdformat-web
