--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -43,7 +43,7 @@ repos:
       - id: check-case-conflict
       # - id: check-toml
   - repo: https://github.com/adrienverge/yamllint.git
-    rev: v1.26.3
+    rev: v1.27.1
     hooks:
       - id: yamllint
         args:
@@ -55,7 +55,7 @@ repos:
     hooks:
       - id: beautysh
   - repo: https://github.com/asottile/pyupgrade
-    rev: v2.34.0
+    rev: v2.37.3
     hooks:
       - id: pyupgrade
         args:
@@ -84,17 +84,17 @@ repos:
           - --expand-star-imports
           - custom_components
   - repo: https://github.com/PyCQA/flake8
-    rev: 4.0.1
+    rev: 5.0.4
     hooks:
       - id: flake8
         additional_dependencies:
-          - pyproject-flake8==0.0.1a2
-          - flake8-bugbear==22.1.11
-          - flake8-comprehensions==3.8.0
-          - flake8_2020==1.6.1
-          - mccabe==0.6.1
-          - pycodestyle==2.8.0
-          - pyflakes==2.4.0
+          # - pyproject-flake8>=0.0.1a5
+          - flake8-bugbear>=22.7.1
+          - flake8-comprehensions>=3.10.0
+          - flake8-2020>=1.7.0
+          - mccabe>=0.7.0
+          - pycodestyle>=2.9.1
+          - pyflakes>=2.5.0
   - repo: https://github.com/PyCQA/isort
     rev: 5.10.1
     hooks:
@@ -118,7 +118,7 @@ repos:
           - --py-version=3.7
         #exclude: ^$
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.961
+    rev: v0.971
     hooks:
       - id: mypy
         args:
