Move codespell configuration to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,3 +14,8 @@ disable = invalid-name, unused-argument, broad-except, missing-docstring, fixme,
 
 [pylint.FORMAT]
 max-line-length = 79
+
+[codespell]
+builtin=clear,rare,informal,usage,code,names
+ignore-words-list=hass,master
+skip=./.*
