Add OTA fw download

--- a/custom_components/zha_toolkit/services.yaml
+++ b/custom_components/zha_toolkit/services.yaml
@@ -1257,7 +1257,8 @@ misc_reinitialize:
         entity:
           integration: zha
 ota_notify:
-  description: Notify a device that an update is available, after triggering ota image providers to fetch new images.
+  description: Notify a device that an update is available, after triggering ota image
+    providers to fetch new images.
   fields:
     ieee:
       description: >-
@@ -1268,6 +1269,17 @@ ota_notify:
       selector:
         entity:
           integration: zha
+    download:
+      description: >-
+        When True, download FW from KKoenk's list that possibly matches devices.
+      selector:
+        boolean:
+    path:
+      description: >-
+        Path to write ota image(s) to (defaults to zha:zigpy_config:ota:otau_directory
+        value or /config/zigpy_ota)
+      selector:
+        text:
     event_success:
       description: Event name in case of success
       example: ota_notify_success
