--- a/blueprints/danfoss_ally_remote_temperature.yaml
+++ b/blueprints/danfoss_ally_remote_temperature.yaml
@@ -14,11 +14,20 @@ blueprint:
           manufacturer: Danfoss
           entity:
             domain: climate
+    temp_sensor_id:
+      name: Temperature Sensor
+      description: External sensor from which the temperature will be read. Expects
+        data format 12.3 (corresponding to °C)
+      selector:
+        entity:
+          domain: sensor
+          device_class: temperature
     min_update_minutes:
       name: Minimum update interval
       description: >
         Updates will not be sent if time from last update is less than minimum interval.
         Normally 30 min for uncovered, 5 min for covered.
+      default: 5
       selector:
         number:
           max: 360
@@ -31,20 +40,13 @@ blueprint:
         Updates must be sent at least every 30 minutes for covered radiators,
         and 3 hours for uncovered radiators.
         Set to 30 min or 150 min.
+      default: 150
       selector:
         number:
           max: 180
           min: 1
           unit_of_measurement: minutes
           mode: box
-    temp_sensor_id:
-      name: Temperature Sensor
-      description: External sensor from which the temperature will be read. Expects
-        data format 12.3 (corresponding to °C)
-      selector:
-        entity:
-          domain: sensor
-          device_class: temperature
 variables:
   device: !input ally_device
   ieee: "{{(device_attr(device, 'identifiers')|list)[0][1]}}"
@@ -64,15 +66,15 @@ condition:
 action:
   - alias: Repeat until restarted to report temperature, or expired max_update delay
     repeat:
-      while: true
+      while: "{{ true }}"
       sequence:
         - alias: Write remote temperature to Danfoss Ally
           service: zha_toolkit.attr_write
           data:
-            ieee: '{{ ally_device }}'
-            cluster_id: 0x0201
+            ieee: '{{ ieee }}'
+            cluster: 0x0201
             attribute: 0x4015
-            value: '{{ (states(temp_sensor_id) | float * 100) | round(0)}}'
+            attr_val: '{{ (states(temp_sensor_id) | float * 100) | round(0)}}'
         - alias: Wait until the maximum update delay expires (automation restarts
             when temperature changes before)
           delay:
