--- a/blueprints/script_Thermometer_setReporting.yaml
+++ b/blueprints/script_Thermometer_setReporting.yaml
@@ -1,20 +1,21 @@
-iblueprint:
+---
+blueprint:
   domain: script
   name: Zigbee Thermometer Configure Reporting
   description: A script that configures the reporting of a zigbee thermometer.
   source_url: https://github.com/mdeweerd/zha-toolkit/blob/master/blueprints/script_Thermometer_setReporting.yaml
-  fields:
+  input:
     entity_name:
       name: entity_name
-      description: A Zigbee Entity (all entities of the device resolve to the same address)
-      required: true
+      description: A Zigbee Entity (all entities of the device resolve to the same
+        address)
       selector:
         entity:
           integration: zha
 sequence:
   - service: zha_toolkit.conf_report
     data:
-      ieee: "{{ entity_name }}"
+      ieee: '{{ entity_name }}'
       cluster: 1026
       attribute: 0
       tries: 100
@@ -24,7 +25,7 @@ sequence:
       min_interval: 19
   - service: zha_toolkit.conf_report_read
     data:
-      ieee: "{{ entity_name }}"
+      ieee: '{{ entity_name }}'
       cluster: 1026
       attribute: 0
       tries: 100
