--- a/blueprints/script_danfoss_ally_configure.yaml
+++ b/blueprints/script_danfoss_ally_configure.yaml
@@ -1,10 +1,13 @@
-iblueprint:
+---
+blueprint:
   domain: script
-  name: Zigbee Thermometer Configure Reporting
-  description: A script that configures the reporting of a zigbee thermometer.  You can listen on the 'zha_done' event to see some of the configuration results
-  source_url: https://github.com/mdeweerd/zha-toolkit/blob/master/blueprints/script_Thermometer_setReporting.yaml
-  fields:
-    entity_name:
+  name: Danfoss Ally TRV configuration
+  description: A script that configures the reporting of a Danfoss Ally TRV.  zigbee
+    thermometer.  You can listen on the 'zha_done' event to see some of the configuration
+    results.  Sets report configuration and enables window open function.
+  source_url: https://github.com/mdeweerd/zha-toolkit/blob/master/blueprints/script_danfoss_ally_configure.yaml
+  input:
+    device_ref:
       name: Ally TRV Device
       description: A Danfoss Ally Thermostatic Regulation Valve (TRV) to configure
       selector:
@@ -13,26 +16,37 @@ iblueprint:
           entity:
             domain: climate
             integration: zha
+variables:
+  device: !input device_ref
+  ieee: "{{(device_attr(device, 'identifiers')|list)[0][1]}}"
 sequence:
-  - alias: "Configure reporting"
+  - alias: Configure reporting of local_temperature in Thermostat cluster
     service: zha_toolkit.conf_report
     data:
-      ieee: "{{ entity_name }}"
-      cluster: 1026
+      ieee: '{{ ieee }}'
+      cluster: 0x0201
       attribute: 0
       tries: 100
       event_done: zha_done
       reportable_change: 20
       max_interval: 300
       min_interval: 19
-  - alias: "Read back reporting configuration, for debugging"
+  - alias: Read back reporting configuration, for debugging
     service: zha_toolkit.conf_report_read
     data:
-      ieee: "{{ entity_name }}"
-      cluster: 1026
+      ieee: '{{ ieee }}'
+      cluster: 0x0201
       attribute: 0
       tries: 100
       event_done: zha_done
+  - alias: Enable close window functionality
+    service: zha_toolkit.attr_write
+    data:
+      ieee: '{{ ieee }}'
+      cluster: 513
+      attribute: 16387
+      attr_val: 0
+      manf: 4678
 mode: restart
 icon: mdi:thermometer-check
 description: >-
