Add 'nwk' address to routes_and_neighbours output, be more sparse on file output in this functionnality

--- a/blueprints/danfoss_ally_remote_temperature.yaml
+++ b/blueprints/danfoss_ally_remote_temperature.yaml
@@ -66,7 +66,7 @@ condition:
 action:
   - alias: Repeat until restarted to report temperature, or expired max_update delay
     repeat:
-      while: "{{ true }}"
+      while: "{{ 1 == 1 }}"
       sequence:
         - alias: Write remote temperature to Danfoss Ally
           service: zha_toolkit.attr_write
