--- a/blueprints/danfoss_ally_remote_temperature.yaml
+++ b/blueprints/danfoss_ally_remote_temperature.yaml
@@ -89,6 +89,7 @@ action:
             cluster: 0x0201
             attribute: 0x4015
             attr_val: '{{ (((states(temp_sensor_id)|float) + temp_offset) * 100) | round(0) }}'
+            read_before_write: false
         - alias: Wait until the maximum update delay expires (automation restarts
             when temperature changes before)
           delay:
