--- a/blueprints/danfoss_ally_remote_temperature_min_delay_fake_change.yaml
+++ b/blueprints/danfoss_ally_remote_temperature_min_delay_fake_change.yaml
@@ -71,6 +71,7 @@ action:
       attribute: 0x4015
       attr_val: '{{ (((states(temp_sensor_id)|float) + temp_offset) * 100) | round(0)
         }}'
+      read_before_write: false
   - alias: Wait until the minimum update delay expires (automation restarts when temperature
       changes before)
     delay:
