--- a/examples/script_danfoss_ally_adaptation_run_init.yaml
+++ b/examples/script_danfoss_ally_adaptation_run_init.yaml
@@ -14,57 +14,62 @@ sequence:
       ieee: "{{ ieee }}"
       cluster: 513
       attribute: 16403
-      attr_val: 0
-      manf: 4678
-      read_before_write: false
-      csvout: "{{ csv }}"
-      tries: "{{ default_tries}}"
-      event_done: zha_done
-  - alias: Allow the valve to consider it is not mounted
-    delay:
-      hours: 0
-      minutes: 0
-      seconds: 10
-      milliseconds: 0
-  - alias: Initiate Adaptation Run
-    service: zha_toolkit.attr_write
-    data:
-      ieee: "{{ ieee }}"
-      cluster: 513
-      attribute: 16460
-      attr_val: 1
-      manf: 4678
-      tries: "{{ default_tries}}"
-      csvout: "{{ csv }}"
-      event_done: zha_done
-  - alias: Set the valve as mounted
-    service: zha_toolkit.attr_write
-    data:
-      ieee: "{{ ieee }}"
-      cluster: 513
-      attribute: 16403
       attr_val: 1
       manf: 4678
       read_before_write: false
       csvout: "{{ csv }}"
       tries: "{{ default_tries}}"
       event_done: zha_done
-  - alias: Allow the valve to consider it is mounted
-    delay:
-      hours: 0
-      minutes: 0
-      seconds: 15
-      milliseconds: 0
-  - alias: Read mount status (should be false)
-    service: zha_toolkit.attr_read
-    data:
-      ieee: "{{ ieee }}"
-      cluster: 513
-      attribute: 16402
-      manf: 4678
-      csvout: "{{ csv }}"
-      tries: "{{ default_tries}}"
-      event_done: zha_done
+  - alias: Wait until the device is in mounting mode (short press)
+    repeat:
+      until:
+        - condition: template
+          value_template: "{{ is_state_attr('var.allyscript', device + 'mounting', 0) }}"
+      sequence:
+        - delay:
+            hours: 0
+            minutes: 0
+            seconds: 2
+            milliseconds: 0
+          alias: Wait between successive reads
+        - alias: Read mount status (should be false)
+          service: zha_toolkit.attr_read
+          data:
+            ieee: "{{ ieee }}"
+            cluster: 513
+            attribute: 16402
+            manf: 4678
+            csvout: "{{ csv }}"
+            tries: "{{ default_tries}}"
+            event_done: zha_done
+            state_id: var.allyscript
+            state_attr: "{{ device + 'mounting' }}"
+            allow_create: true
+  - alias: Wait until the user mounts the device
+    repeat:
+      until:
+        - condition: template
+          value_template: "{{ is_state_attr('var.allyscript', device + 'mounting', 0) }}"
+      sequence:
+        - delay:
+            hours: 0
+            minutes: 0
+            seconds: 2
+            milliseconds: 0
+          alias: Wait between successive reads
+        - alias: Read mount status (should be false)
+          service: zha_toolkit.attr_read
+          data:
+            ieee: "{{ ieee }}"
+            cluster: 513
+            attribute: 16402
+            manf: 4678
+            csvout: "{{ csv }}"
+            tries: "{{ default_tries}}"
+            event_done: zha_done
+            state_id: var.allyscript
+            state_attr: "{{ device + 'mounting' }}"
+            allow_create: true
   - alias: Read the adaptation status (should not be 2)
     service: zha_toolkit.attr_read
     data:
@@ -94,6 +99,7 @@ sequence:
       attribute: 16460
       attr_val: 1
       manf: 4678
+      read_before_write: false
       tries: "{{ default_tries}}"
       csvout: "{{ csv }}"
       event_done: zha_done
@@ -119,6 +125,7 @@ fields:
     name: Ally TRV Device
     description: A Danfoss Ally Thermostatic Regulation Valve (TRV) to configure
     required: true
+    default: 7d16a871a8caa808d80e23f5d92ca65d
     selector:
       device:
         manufacturer: Danfoss
