Correct package for bisect

--- a/custom_components/zha_toolkit/manifest.json
+++ b/custom_components/zha_toolkit/manifest.json
@@ -13,7 +13,7 @@
     "requirements": [
         "packaging>=20.8",
         "pytz",
-        "bisect"
+        "pycopy-bisect"
     ],
     "version": "0.0.0"
 }
