Add a script that demonstrates the use of data from zha_devices

--- a/examples/script_use_zha_devices.yaml
+++ b/examples/script_use_zha_devices.yaml
@@ -1,4 +1,4 @@
-alias: Loop over zha_devices, extract some data so system log
+alias: Loop over zha_devices, extract some device data
 sequence:
   - parallel:
       - sequence:
@@ -17,7 +17,7 @@ sequence:
                 data:
                   logger: zha_devices
                   level: error
-                  message: "{{ \"Item '%s' Power: %s\" % ( repeat.item.name, repeat.item.lqi ) }}"
+                  message: "{{ \"Item '%s' Power: %s dBm Available: %s\" % ( repeat.item.name, repeat.item.rssi, repeat.item.available ) }}"
       - service: zha_toolkit.zha_devices
         data:
           event_done: zha_devices_ready
