--- a/examples/script_use_zha_devices.yaml
+++ b/examples/script_use_zha_devices.yaml
@@ -1,23 +1,24 @@
+---
 alias: Loop over zha_devices, extract some device data
 sequence:
   - parallel:
       - sequence:
-        - wait_for_trigger:
-            - platform: event
-              event_type: zha_devices_ready
-        - service: system_log.write
-          data:
-            logger: zha_devices
-            level: error
-            message: "{{ \"Got event %s\" % ( wait.trigger.event.data.devices ) }}"
-        - repeat:
-            for_each: "{{ wait.trigger.event.data.devices }}"
-            sequence:
-              - service: system_log.write
-                data:
-                  logger: zha_devices
-                  level: error
-                  message: "{{ \"Item '%s' Power: %s dBm Available: %s\" % ( repeat.item.name, repeat.item.rssi, repeat.item.available ) }}"
+          - wait_for_trigger:
+              - platform: event
+                event_type: zha_devices_ready
+          - service: system_log.write
+            data:
+              logger: zha_devices
+              level: error
+              message: '{{ "Got event %s" % ( wait.trigger.event.data.devices ) }}'
+          - repeat:
+              for_each: '{{ wait.trigger.event.data.devices }}'
+              sequence:
+                - service: system_log.write
+                  data:
+                    logger: zha_devices
+                    level: error
+                    message: "{{ \"Item '%s' Power: %s dBm Available: %s\" % ( repeat.item.name, repeat.item.rssi, repeat.item.available ) }}"
       - service: zha_toolkit.zha_devices
         data:
           event_done: zha_devices_ready
