Remove 'Service' from the component description

--- a/custom_components/zha_toolkit/manifest.json
+++ b/custom_components/zha_toolkit/manifest.json
@@ -9,7 +9,7 @@
     "domain": "zha_toolkit",
     "iot_class": "local_polling",
     "issue_tracker": "https://github.com/mdeweerd/zha-toolkit/issues",
-    "name": "\ud83e\uddf0 ZHA Toolkit Service",
+    "name": "\ud83e\uddf0 ZHA Toolkit",
     "requirements": [
         "packaging>=20.8",
         "pytz"
