--- a/.github/workflows/stats.yaml
+++ b/.github/workflows/stats.yaml
@@ -6,9 +6,16 @@ jobs:
     if: ${{ startsWith(github.ref, 'refs/tags/v') }}
     runs-on: ubuntu-latest
     steps:
+      # Credit: https://stackoverflow.com/questions/58033366/how-to-get-the-current-branch-within-github-actions
+      - name: Extract branch name
+        shell: bash
+        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+        id: extract_branch
       - uses: actions/checkout@v3
         with:
-          ref: ${{ github.head_ref }}
+          ref: ${{ steps.extract_branch.outputs.branch }}
+          with:
+            fetch-depth: 0
       - run: ${{ github.workspace }}/.github/scripts/gen_stats.sh
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
