--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,19 @@
 [tool:pytest]
 asyncio_mode=strict
 
+[flake8]
+exclude = .venv,.git,.tox
+# To work with Black
+max-line-length = 79
+# B028 is manually surrounded by quotes, consider using the `!r`
+# W503 line break before binary operator
+ignore =
+    B028,
+    W503
+
+# per-file-ignores =
+#    example/*:F811,F401,F403
+
 [isort]
 profile = black
 line_length = 79
