--- a/.github/workflows/lint_python.yml
+++ b/.github/workflows/lint_python.yml
@@ -17,7 +17,7 @@ jobs:
       - run: pip install --upgrade pip wheel
       - run: >-
           pip install bandit black codespell flake8 flake8-2020 flake8-bugbear
-          flake8-comprehensions mccabe pycodstyle pyflakes mypy pytest pyupgrade safety
+          flake8-comprehensions mccabe pycodestyle pyflakes mypy pytest pyupgrade safety
       - run: bandit --recursive --skip B101,B311 .
       - run: black --check . || true
       - run: codespell --ignore-words-list="hass"
