remove cli options from flake8

--- a/.github/workflows/lint_python.yml
+++ b/.github/workflows/lint_python.yml
@@ -22,8 +22,7 @@ jobs:
       - run: black --check . || true
       - run: codespell --ignore-words-list="hass"
       - run: >-
-          flake8 . --count --ignore W503 --max-complexity=20
-          --max-line-length=184 --show-source --statistics
+          flake8 . --count --show-source --statistics
       - run: isort --check-only --profile black . || true
       - run: pip install -r requirements.txt || pip install --editable . || true
       - run: mkdir --parents --verbose .mypy_cache
